# veda-final-pr-2

./: README.md  camera_server.cpp  camera_server_main.cpp  fire_detector.cpp
client/: CMakeLists.txt  README.md  addclientwidget.cpp  addclientwidget.h  addclientwidget.ui  clickeventfilter.cpp  clickeventfilter.h  client.cpp  client.h  ftpclient.cpp  ftpclient.h  ftpclient.ui  ftpmonitor.cpp  ftpmonitor.h  gstreamerclient.cpp  gstreamerclient.h  gstreamerclientthread.cpp  gstreamerclientthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  selecteclientlist.cpp  selecteclientlist.h  selecteclientlist.ui  tcpclient.cpp  tcpclient.h  tcpthread.cpp  tcpthread.h
cm_server/: Makefile  README.md  camera_server.cpp  camera_server.h  camera_server_main.cpp  fire_detector.cpp  fire_detector.h  main  motionDiff.cpp  motionDiff.h  server.crt  server.csr  server.key  testMake.sh
face_detect/: README.md  face_detect.py  test4-1.py
